Add first version of ansible role.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,13 +2,13 @@
 # Install hugepages
 #
 
-- name: "Add {{ hugepages_system_group }} user group"
+- name: "add {{ hugepages_system_group }} user group"
   group: name={{ hugepages_system_group }} system=yes
 
-- name: "Add members to {{ hugepages_system_group }}"
+- name: "add members to {{ hugepages_system_group }}"
   user: name={{ hugepages_system_member }} groups={{ hugepages_system_member }} append=yes
 
-- name: "Get gid of {{ hugepages_system_group }}"
+- name: "get gid of {{ hugepages_system_group }}"
   shell: "getent group {{ hugepages_system_group }} | cut -d: -f3"
   register: hugepages_system_gid
 
