Use galaxy_tags instead of categories

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -19,10 +19,15 @@ galaxy_info:
         versions:
             - 6
             - 7
-  categories:
+  galaxy_tags:
       - development
+      - linux
       - system
-      - web
+      - database
+      - java
+      - jdk
       - performace
+      - hugepages
+      - largepages
 
 dependencies: []
